# PhANNs

./: .gitignore
PhANNs/: README.md  config.toml  get_args.py  load.py  test.py  test_from_fasta.py  train.py  utils.py
PhANNs2/: phanns.py  pyproject.toml  requirements.in  requirements.txt
PhANNs2/utils/: calc.pyx  config_handler.py  data.py  data_loading_utils.py  logger_util.py  setup.py
PhANNs2/utils/config/: config.toml  sample_config.toml
model_training/: 06_load_and_pickle.py
