[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "phanns"
authors = [
    {name = "Sean Fahey", email = "sfahey1745@sdsu.edu"},
]
description = "PhANNs (Phage Artifical Neural Networks)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'tensorflow==2.15.0',
    'scipy>=1.12.0',
    'statsmodels>=0.14.0',
    'Biopython>=1.83',
    'pip-tools>=7.4.0'
]
dynamic = ["version"]

[project.scripts]
phanns_load_dataset = "phanns:load_dataset"
phanns_train = "phanns:train"
phanns_test = "phanns:initial_test"
phanns_test_from_fasta = "phanns:test_from_fasta"
phanns_write_config = "utils.config_handler:write_from_toml"
phanns_reset_config = "utils.config_handler:verify_clear_config"
